[gd_scene load_steps=14 format=3 uid="uid://b11rigyeoc3re"]

[ext_resource type="Script" uid="uid://brogdkincrfoh" path="res://assets/scenes/game_scene.gd" id="1_5eccb"]
[ext_resource type="PackedScene" uid="uid://cs5f0x4jchyj2" path="res://assets/scenes/in_game_ui.tscn" id="2_68mr5"]
[ext_resource type="Texture2D" uid="uid://bmsln1pifbvs6" path="res://assets/textures/fx/hit_02_effect.jpg" id="3_1gwi2"]
[ext_resource type="Script" uid="uid://d172rxc2oke1c" path="res://assets/scenes/shop.gd" id="3_4y838"]
[ext_resource type="Shader" uid="uid://b3pome8s7hhf6" path="res://assets/scripts/shaders/UI_outline.gdshader" id="4_4y838"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_et1oa"]

[sub_resource type="Theme" id="Theme_et1oa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4y838"]
bg_color = Color(0.519177, 0.39289, 0.67135, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1gwi2"]
bg_color = Color(0.314156, 0.218282, 0.478821, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.419298, 0.626065, 0.790687, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_et1oa"]
bg_color = Color(0.198825, 0.161311, 0.311695, 1)

[sub_resource type="Theme" id="Theme_4y838"]
Button/styles/hover = SubResource("StyleBoxFlat_4y838")
Button/styles/normal = SubResource("StyleBoxFlat_1gwi2")
Button/styles/pressed = SubResource("StyleBoxFlat_et1oa")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1gwi2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7xejk"]
shader = ExtResource("4_4y838")
shader_parameter/color = Color(0.23141, 0.319718, 0.512097, 1)
shader_parameter/direction = -1.0
shader_parameter/frequency = 15.0
shader_parameter/speed = 3.0
shader_parameter/radius = 1.0
shader_parameter/line_thickness = 0.03

[node name="Game" type="Node3D"]
script = ExtResource("1_5eccb")

[node name="InGameUI" parent="." instance=ExtResource("2_68mr5")]

[node name="GameInfoUI" type="Control" parent="."]
visible = false
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Title" type="RichTextLabel" parent="GameInfoUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -63.0
offset_right = 135.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_offset_y = -3
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/normal_font_size = 30
text = "Objetive"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="GameInfoUI"]
modulate = Color(0, 0, 0, 1)
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -27.0
offset_right = 79.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.01201)

[node name="Description" type="RichTextLabel" parent="GameInfoUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -24.0
offset_right = 120.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/normal_font_size = 14
text = "description goes here uhh...,,"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="RoundEndUI" type="Control" parent="."]
visible = false
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GG" type="Label" parent="RoundEndUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.0
offset_top = -96.5
offset_right = 173.0
offset_bottom = 78.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.682226, 0.244029, 0.438812, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 50
text = "GG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="RichTextLabel" parent="RoundEndUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.5
offset_top = -2.0
offset_right = 144.5
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/normal_font_size = 16
text = "{X} team wins this round!!!"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShopUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_4y838")

[node name="BgOutline" type="ColorRect" parent="ShopUI"]
z_index = -1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -217.0
offset_top = -170.0
offset_bottom = 149.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.475109, 0.559679, 0.827677, 1)

[node name="Shop" type="ColorRect" parent="ShopUI"]
material = SubResource("ShaderMaterial_et1oa")
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -169.0
offset_right = -2.0
offset_bottom = 148.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.121929, 0.133329, 0.189038, 1)

[node name="ItemsOutline" type="ColorRect" parent="ShopUI/Shop"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -134.5
offset_right = -17.0
offset_bottom = 65.5
grow_horizontal = 0
grow_vertical = 2
color = Color(0.475109, 0.559679, 0.827677, 1)

[node name="ItemsBG" type="ColorRect" parent="ShopUI/Shop"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -132.5
offset_right = -18.0
offset_bottom = 64.5
grow_horizontal = 0
grow_vertical = 2
color = Color(0.123487, 0.106051, 0.199465, 1)

[node name="ItemsContainer" type="BoxContainer" parent="ShopUI/Shop"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = 29.0
offset_right = -114.0
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
vertical = true

[node name="itemTemplate" type="Button" parent="ShopUI/Shop/ItemsContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_et1oa")

[node name="TextureRect" type="TextureRect" parent="ShopUI/Shop/ItemsContainer/itemTemplate"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1gwi2")
expand_mode = 1
stretch_mode = 6

[node name="RichTextLabel" type="RichTextLabel" parent="ShopUI/Shop/ItemsContainer/itemTemplate"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -38.0
offset_top = -24.0
offset_right = 38.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0.529067, 0.529067, 0.529067, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 2
text = "350"
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 2

[node name="CloseShop2" type="Button" parent="ShopUI/Shop"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -38.0
offset_top = -37.0
offset_right = 38.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_4y838")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1gwi2")
text = "Buy"

[node name="Outline" type="ColorRect" parent="ShopUI"]
material = SubResource("ShaderMaterial_7xejk")
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -169.0
offset_right = -2.0
offset_bottom = 148.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.145266, 0.15813, 0.220946, 1)

[node name="CloseShop" type="Button" parent="ShopUI"]
layout_mode = 0
offset_left = 592.0
offset_top = 22.0
offset_right = 631.0
offset_bottom = 36.0
theme = SubResource("Theme_4y838")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1gwi2")

[node name="RichTextLabel" type="RichTextLabel" parent="ShopUI/CloseShop"]
layout_mode = 0
offset_top = -2.0
offset_right = 39.0
offset_bottom = 16.0
theme_override_font_sizes/normal_font_size = 12
text = "X"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainCamera" type="Camera3D" parent="."]
transform = Transform3D(0.707107, -0.586907, 0.394385, 0, 0.557745, 0.830012, -0.707107, -0.586907, 0.394385, 4.84099, 9.07359, 3.88934)

[node name="Map" type="Node3D" parent="."]

[node name="placeHolder" type="Node3D" parent="Map"]

[node name="spawnLocations" type="Node3D" parent="Map/placeHolder"]
transform = Transform3D(1.58932e-08, -2.75286e-21, -1, 2.98023e-08, 1, 2.98023e-08, 1, 2.75286e-21, -1.03316e-07, -4.76837e-07, -0.361445, -4.76837e-07)

[node name="whiteTeam" type="Node3D" parent="Map/placeHolder/spawnLocations"]
transform = Transform3D(-1, -6.05845e-28, -8.74228e-08, -1.95399e-14, 1, 1.3027e-15, 8.74228e-08, -5.62093e-28, -1, -18.0909, 0.591753, -0.0551581)

[node name="blackTeam" type="Node3D" parent="Map/placeHolder/spawnLocations"]
transform = Transform3D(-1, -6.05845e-28, -8.74228e-08, -1.06581e-14, 1, 1.3027e-15, 8.74228e-08, -5.62093e-28, -1, 17.5455, 0.591752, -0.0339885)
